change title and desc in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <title>딥트레이드테크놀로지스</title>
+    <meta property="og:title" content="딥트레이드테크놀로지스" />
     <meta
       name="description"
-      content="딥트레이드테크놀로지스"
+      content="딥트레이드테크놀로지스는 최신의 AI 기술과 금융 데이터를 활용해 투자에 반영하는 AI 로보 어드바이저의 선구자로서 시장의 복잡한 패턴을 분석하여 사용자들이 인덱스보다 X% 더 높은 수익률을 얻을 수 있도록 끊임없이 노력합니다."
     />
+    <meta
+    name="og:description"
+    content="딥트레이드테크놀로지스는 최신의 AI 기술과 금융 데이터를 활용해 투자에 반영하는 AI 로보 어드바이저의 선구자로서 시장의 복잡한 패턴을 분석하여 사용자들이 인덱스보다 X% 더 높은 수익률을 얻을 수 있도록 끊임없이 노력합니다."
+  />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>딥트레이드테크놀로지스</title>
+ 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
