--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,12 @@
     <meta name="naver-site-verification" content="c623fe64b2c1295e0a891a0d97c65d1b462cbfc4" />
     <meta name="description" content="딥트레이드테크놀로지스는 최신의 AI 기술과 금융 데이터를 활용해 투자에 반영하는 AI 로보 어드바이저의 선구자로서 시장의 복잡한 패턴을 분석하여 사용자들이 인덱스보다 X% 더 높은 수익률을 얻을 수 있도록 끊임없이 노력합니다." />
     <meta property="og:title" content="딥트레이드테크놀로지스" />
-
     <meta
-      name="description"
-      content="딥트레이드테크놀로지스는 최신의 AI 기술과 금융 데이터를 활용해 투자에 반영하는 AI 로보 어드바이저의 선구자로서 시장의 복잡한 패턴을 분석하여 사용자들이 인덱스보다 X% 더 높은 수익률을 얻을 수 있도록 끊임없이 노력합니다."
-    />
+    property="og:image"
+    content="https://deeptrade-bucket.s3.ap-northeast-2.amazonaws.com/deeptradeindexlogo.png"
+  />
+    
+   
     <meta
     name="og:description"
     content="딥트레이드테크놀로지스는 최신의 AI 기술과 금융 데이터를 활용해 투자에 반영하는 AI 로보 어드바이저의 선구자로서 시장의 복잡한 패턴을 분석하여 사용자들이 인덱스보다 X% 더 높은 수익률을 얻을 수 있도록 끊임없이 노력합니다."
